appId: com.cardselling.agent
tags:
  - regression
  - P1
  - Functional
---
- launchApp:
    clearState: true

- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${MOBILE_NUMBER_1}"
      PASSWORD: "${PASSWORD_1}"

- assertVisible: Notification Icon
- tapOn: Notification Icon
- swipe: { direction: DOWN }
- scroll
- scroll

- tapOn: All
- assertVisible: Filter
- tapOn: General Notification
- assertVisible: Notifications
- assertVisible: General Notification
- swipe: { direction: DOWN }
- scroll
- scroll
#- scrollUntilVisible: {element : ""}

- runFlow:
    file: ../../flows/teardown.yaml
