appId: com.cardselling.agent
tags:
  - smoke
  - regression
  - P0
  - Functional

---
- launchApp:
    clearState: true

- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${MOBILE_NUMBER_1}"
      PASSWORD: "${PASSWORD_1}"

- assertVisible: Notification Icon
- tapOn: Notification Icon
- assertVisible: Notifications
- assertVisible: All
- assertVisible: Go Back Icon
- tapOn: Notification Icon
- tapOn: Go Back Icon

- tapOn: Account balance
- assertVisible: Notification Icon
- tapOn: Notification Icon
- assertVisible: Notifications

- runFlow:
    file: ../../flows/teardown.yaml
