appId: com.cardselling.agent
tags:
  - regression
  - P3
  - Functional
---
- launchApp:
    clearState: true
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${MOBILE_NUMBER_1}"
      PASSWORD: "${PASSWORD_1}"

- assertVisible: Notification Icon
- tapOn: Notification Icon

- assertVisible: Notifications
- assertVisible: All
- tapOn: All
- assertVisible: Filter
- assertVisible: Close Icon
- tapOn: Close Icon
- assertNotVisible: Filter
- assertVisible: Notifications
- assertVisible: All
- tapOn: All

- runFlow:
    file: ../../flows/teardown.yaml
