appId: com.cardselling.agent
tags:
  - smoke
  - regression
  - P0
  - Functional

---
- launchApp:
    clearState: true

- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: '${MOBILE_NUMBER_1}'
      PASSWORD: '${PASSWORD_1}'

- tapOn: Request Money
- assertVisible: Go Back Icon
- assertVisible: Request Money

- runFlow:
    when:
      visible: Cancel Request
    commands:
      - tapOn: Cancel Request
      - assertVisible: Are you sure?
      - tapOn: CONFIRM
      - assertVisible: Request Cancelled
      - tapOn: CLOSE
      - tapOn: Request Money

- assertVisible: Sales Representative
- assertVisible: Enter Request Amount
- assertVisible: Note

# Input random amount directly
- tapOn: Enter amount here
- inputText:
    text: '{{random(251, 9999)}}'

# Input random note directly
- tapOn: Write here
- inputText:
    text: "{{randomChoice(['Please process this request urgently.','Payment needed by tomorrow.','Kindly approve the amount.','This is for client settlement.','Request for immediate action.'])}}"

- hideKeyboard
- tapOn: Submit Request

- assertVisible: Summary
- tapOn: Confirm

- assertVisible: Successful!!
- assertVisible:
    text: Virtual balance request has been submitted successfully.
    index: 1

- tapOn: CLOSE
- assertVisible: Account balance

- runFlow:
    file: ../../flows/teardown.yaml
