appId: com.cardselling.agent
---
- runFlow:
    when:
      visible: Register
    commands:
      - assertVisible: Register
      - tapOn: "Login"

- tapOn: "Enter registered number"
- inputText:
    text: "${MOBILE_NUMBER}"
    replace: true

- tapOn: "Enter your password"
- inputText: "${PASSWORD}"

- tapOn:
    text: "Login"
    index: 1

- runFlow:
    when:
      visible: Allow CS Agent to send you notifications?
    commands:
      - tapOn: Allow

- assertVisible: "Account balance"

- runFlow:
    when:
      visible: Device Added
    commands:
      - tapOn: Device Added
